# cpp_with_gtests

./: CMakeLists.txt  README.md
include/: add.h  multiply.h
src/: CMakeLists.txt  add.cpp  multiply.cpp
tests/: CMakeLists.txt  test_arithmatic.cpp
